added some comments for you gary

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <nav>
+    <nav> 
+        <!-- this seems to be the best way to not mess up the styling of the webpage as it relates to the header nav section? -->
         <header class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
             <div>
@@ -50,6 +51,7 @@
             </p>
         </section>
     </main>
+    <!-- not sure about whether i put the section or article tags correctly, i think how i did it makes sense? -->
     <aside class="benefits">
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
