changed the nav tag to be more efficient by changing the div tag in the css to the nav to not be redundant

--- a/index.html
+++ b/index.html
@@ -8,25 +8,23 @@
 </head>
 
 <body>
-    <nav> 
-        <!-- this seems to be the best way to not mess up the styling of the webpage as it relates to the header nav section? -->
-        <header class="header">
-            <h1>Hori<span class="seo">seo</span>n</h1>
-            <div>
-                <ul>
-                    <li>
-                        <a href="#search-engine-optimization">Search Engine Optimization</a>
-                    </li>
-                    <li>
-                        <a href="#online-reputation-management">Online Reputation Management</a>
-                    </li>
-                    <li>
-                        <a href="#social-media-marketing">Social Media Marketing</a>
-                    </li>
-                </ul>
-            </div>    
-        </header>
-    </nav>
+    <!-- this seems to be the best way to not mess up the styling of the webpage as it relates to the header nav section? -->
+    <header class="header">
+        <h1>Hori<span class="seo">seo</span>n</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
+        </nav>    
+    </header>
     <div class="hero"></div>
     <main class="content">
         <section class="search-engine-optimization">
@@ -51,7 +49,7 @@
             </p>
         </section>
     </main>
-    <!-- not sure about whether i put the section or article tags correctly, i think how i did it makes sense? -->
+    <!-- doesn't seem like theres any reason to add the actual article tag to any of this? -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
