--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- this seems to be the best way to not mess up the styling of the webpage as it relates to the header nav section? -->
+    <!-- changed the css file to fix the styling on the nav sectionso its most efficient -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -74,7 +74,7 @@
         </section>
     </aside>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
