fixed spelling in the comments on the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- changed the css file to fix the styling on the nav sectionso its most efficient -->
+    <!-- changed the css file to fix the styling on the nav section so it doesnt break the styling -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -49,7 +49,7 @@
             </p>
         </section>
     </main>
-    <!-- doesn't seem like theres any reason to add the actual article tag to any of this? -->
+    <!-- doesn't seem like theres any reason to add the actual article tag to any of this? ^ \/ -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
